--- a/css/base.css
+++ b/css/base.css
@@ -14,9 +14,12 @@ html {
 }
 
 body {
-  font-family: Inter, Arial, sans-serif;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Arial, sans-serif;
+  font-weight: 400;
   background-color: var(--color-bg-main);
   color: var(--color-text-main);
+  line-height: 1.55;
 }
 
 a {
@@ -30,35 +33,26 @@ img {
 }
 
 h1 {
-  font-size: 35px;
+  font-size: 36px;
   line-height: 1.2;
-  margin-bottom: 16px;
- 
+  margin-bottom: 32px;
 }
 
 h2 {
-  font-size: 32px;
-  margin-bottom: 32px;
-  
-}
-
-h2::after {
-  content: "";
-  display: block;
-  width: 98%;
-  height: 3px;
-  background-color: var(--color-accent);
-  margin: 12px auto 0;
+  font-size: 24px;
+  line-height: 1.3;
+  margin-bottom: 24px;
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 24px;
   margin-bottom: 12px;
   color: var(--color-primary);
 }
 
 p {
-  color: var(--color-text-muted);
+  /* color: var(--color-text-muted); */
+   font-size: 24px;
   line-height: 1.6;
 }
 
